# Extismx

./: .gitignore  README.md  completion.md  documentation.md  extism-registry.md  final-validation.md  getting-started.md  implementation-report.md  note  package-lock.json  package.json  plan.md  plan.md.bak  plan1.md  plan2.md  plugin.md  pnpm-lock.yaml  test-results.txt  tsconfig.json
doc/: README.md  api-reference.md  architecture.md  contributing.md  debugging-guide.md  faq.md  mastra-integration-guide.md  plugin-development-tutorial.md  security-best-practices.md
extism-registry/: package-lock.json  package.json  plan.md  pnpm-lock.yaml
src/: COMPLETION_ANNOUNCEMENT.md  community-platform.ts  community-test.ts  enterprise-support.js  enterprise-support.ts  enterprise-test.js  enterprise-test.ts  extism-mcp.ts  extism-pdk.ts  hello-plugin.ts  host.ts  management-console-validation.md  mastra-integration.ts  note  plugin-sign.ts  registry-cli.ts  registry-test.ts  registry-types.ts  registry.ts  test-all-features.js  test-auth-system.js  test-installation-steps.js  test-management-console.js  test-package-manager.ts
src/c-pdk/: extism_pdk.h  hello_plugin.c  test_plugin.js
src/cli/: bin.ts  index.ts  types.ts
src/cpp-pdk/: CMakeLists.txt  Makefile  README.md  extism_pdk.h  hello_plugin.c  hello_plugin.cpp  plugin.json  test_plugin.js
src/go-pdk/: Makefile  README.md  go.mod  hello_plugin.go  plugin.json  (+1 more)
src/rust-pdk/: Cargo.toml  Makefile  README.md  extism_pdk.rs  hello_plugin.rs  plugin.json  test_plugin.js
tests/: jest.config.ts  setup.ts
(+122 files in other folders)
