[package]
name = "extism-hello-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Extism Authors <authors@extism.org>"]
description = "A hello world plugin for Extism using Rust PDK"

[lib]
crate-type = ["cdylib"]
path = "hello_plugin.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 